src/test/deca/etapeB/invalid/greater_notvalid_int_string.res
./src/test/deca/etapeB/invalid/greater_notvalid_int_string.deca:7:5: cannot use operator eqquals on two different type
